--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,16 +37,16 @@ header {
   top: -18px;
   left: 0;
 }
-.nav, .nav_toggle, .navigation {
+/*.nav, .nav_toggle, .navigation {
   display: none;
-}
+}*/
 /*------------レスポンシブグローバルナビゲーション----------------*/
 /*.main_navigation {
   display: none;
 }*/
-.nav_toggle, .nav, .navigation {
+/*.nav_toggle, .nav,.navigation {
   display: block;
-}
+}*/
 .navigation {
   position: relative;
 }
@@ -63,6 +63,12 @@ header {
   height: 1.5rem;
   cursor: pointer;
 }
+
+.nav_toggle:hover{
+	background-color:transparent;
+	opacity: 0.7;
+}
+
 .nav_toggle i {
   display: block;
   width: 100%;
@@ -413,6 +419,12 @@ _:-ms-lang(x)::-ms-backdrop, .d-demo {
     transform: translateX(-200%);
   }
 }*/
+
+/*---------スクロールダウンアニメ------------*/
+.arrowWrap{
+	opacity: 0;
+}
+
 /*-------------レスポンシブTOPミッション会社情報----------------*/
 .sec_3 {
   display: none;
