--- a/css/style.css
+++ b/css/style.css
@@ -208,47 +208,70 @@ header {
 }
 .navigation {
   position: relative;
+	
 }
 .navigation img {
   position: absolute;
-  top: -22px;
-  left: -80px;
+  top: -10px;
+  left: -70px;
   width: 70px;
   height: auto;
+	transition: 0.3s ease;
 }
+
+.navigation img:hover{
+	opacity: 0.7;
+}
+
 .nav_toggle {
   position: relative;
-  width: 1.75rem;
-  height: 1.5rem;
+  width: 3.2rem;
+  height: 3.2rem;
   cursor: pointer;
+	transition: 0.3s ease;
+	border-radius: 50%;
+	
 }
+
+.nav_toggle:hover{
+	background-color:rgba(241,244,252,0.9);
+}
+
 .nav_toggle i {
   display: block;
-  width: 100%;
+  width: 1.75rem;
   height: 2px;
   background-color: #333;
   position: absolute;
   transition: transform .5s, opacity .5s;
 }
 .nav_toggle i:nth-child(1) {
-  top: 0;
+  top: 15px;
+	right: 0;
+	left: 0;
+	margin: auto;
 }
 .nav_toggle i:nth-child(2) {
   top: 0;
   bottom: 0;
+	right: 0;
+	left: 0;
   margin: auto;
 }
 .nav_toggle i:nth-child(3) {
-  bottom: 0;
+  bottom: 15px;
+	right: 0;
+	left: 0;
+	margin: auto;
 }
 .nav_toggle.show i:nth-child(1) {
-  transform: translateY(10px) rotate(-45deg);
+  transform: translateY(11px) rotate(-45deg);
 }
 .nav_toggle.show i:nth-child(2) {
   opacity: 0;
 }
 .nav_toggle.show i:nth-child(3) {
-  transform: translateY(-12px) rotate(45deg);
+  transform: translateY(-8px) rotate(45deg);
 }
 .nav {
   width: 700px;
@@ -331,19 +354,50 @@ header {
   z-index: 10;
 }
 .hov-child1 {
-  width: 200px;
-  right: -180px;
+  width: 300px;
+  right: -280px;
 }
 .hov-child2 {
-  width: 300px;
-  right: -300px;
+  width: 600px;
+  right: -600px;
 }
+
+.hov-child2 li,.hov-child1 li{
+	position: relative;
+	margin-left: 50px;
+}
+
+.hov-child2 .arrow,.hov-child1 .arrow{
+	position: absolute;
+  top: 0;
+  left: -40px;
+  bottom: -10px;
+  margin: auto;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  transition: .3s ease-in-out;
+  padding: 3px;
+  background: var(--blue3); 
+}
+
+/*.hov-child2 .arrow6{
+	background: green;
+}*/
+
+.hov-child2 a:hover .arrow,.hov-child1 a:hover .arrow {
+  left: -35px;
+}
+
 .hov-child1 a, .hov-child2 a {
   font-size: 1.0rem;
 }
 .hov-child1 > ul > li, .hov-child2 > ul > li {
   margin-bottom: 20px;
 }
+
+
+
 /*.ac-parent {
   position: relative;
 }
@@ -509,6 +563,8 @@ _:-ms-lang(x)::-ms-backdrop, .d-demo {
   height: 70%;
   width: auto;
 }
+
+
 /*-------------TOP会社について----------------*/
 .sec_3 {
   width: 100%;
@@ -896,7 +952,6 @@ footer small {
 .btn__ {
   display: block;
   width: 250px;
-	
 }
 .btn__ a {
   display: block;
@@ -908,7 +963,7 @@ footer small {
   border: 1px solid var(--blue3);
   font-weight: bold;
   position: relative;
-	border-radius:50px;
+  border-radius: 50px;
 }
 .text {
   position: relative;
@@ -1446,60 +1501,68 @@ textarea, .contact-form input[type='text'], .contact-form input[type='email'], .
   transform: translatex(0);
   opacity: 1;
 }
+/*---------ホバーマーカーアニメーション---------*/
+.marker {
+  display: inline;
+  background-image: linear-gradient(90deg, #fcf69f, #fcf69f); /* マーカーの色を指定 */
+  background-repeat: no-repeat;
+  background-position: left bottom; /* マーカーの発生位置を左下に設定 */
+  background-size: 0 40%; /* マーカーの横幅 / 縦幅 */
+  transition: all 0.3s ease; /* マーカーを引く速度 */
+  cursor: pointer; /* ホバー時のカーソルをポインターにする */
+}
+/* マーカーホバー時 */
+.marker:hover {
+  background-size: 100% 40%; /* マーカーの横幅を100%にする */
+}
 /*-------------スクロールダウン----------------*/
-
 /* アニメーション設定 */
 .arrowWrap {
-	display: none;
+  display: none;
   position: fixed;
-  right: -50px;
-	top:50%;
-  height: 200px
+  right: 0px;
+  top: 40%;
+  height: 200px;
+  z-index: 20;
 }
-
 .arrowInner p {
-  font-size: 20px;
-	letter-spacing: 0.5rem;
-	color: var(--gray);
+  font-size: 25px;
+  letter-spacing: 0.5rem;
+  color: var(--blue4);
   text-align: end;
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
-	font-weight: bold;
+  font-weight: bold;
 }
-
 .arrow4 {
   width: 1px;
   height: 100px;
-  margin: 120px auto 0;
+  margin: 100px auto 0;
   background-color: #eee;
   position: relative;
   overflow: hidden;
 }
-
 .arrow4::before {
   content: '';
   width: 1px;
   height: 100px;
   margin: 50px auto 0;
-  background-color: var(--gray);
+  background-color: var(--blue3);
   position: absolute;
   top: -150px;
   left: 0;
-  -webkit-animation: arrow4 2.5s ease 0s infinite normal;
-  animation: arrow4 2.5s ease 0s infinite normal;
+  -webkit-animation: arrow4 1.5s ease 0s infinite normal;
+  animation: arrow4 1.5s ease 0s infinite normal;
 }
-
 @keyframes arrow4 {
   0% {
     -webkit-transform: translate3d(-50%, 0, 0);
     transform: translate3d(-50%, 0, 0);
   }
-
   60% {
     -webkit-transform: translate3d(-50%, 100px, 0);
     transform: translate3d(-50%, 100px, 0);
   }
-
   100% {
     -webkit-transform: translate3d(-50%, 100px, 0);
     transform: translate3d(-50%, 100px, 0);
